# mcp-doctor-agent

./: .env.example  .gitignore  Dockerfile.backend  README.md  TRD.md  calendar_service.py  database.py  docker-compose.yml  email_service.py  main.py  mcp_client.py  mcp_server.py  notification_service.py  pyproject.toml
frontend/: Dockerfile.frontend  README.md  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  main.jsx
frontend/src/components/: AuthScreen.jsx  ChatScreen.jsx
frontend/src/components/ui/: avatar.jsx  badge.jsx  button.jsx  card.jsx  input.jsx  select.jsx  textarea.jsx
frontend/src/context/: AppContext.jsx
